<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RAse_AsesoriaFragment">

    <!-- Sección de Educación -->
    <TextView
        android:id="@+id/tvTitleEducation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:width="345dp"
        android:layout_marginTop="32dp"
        android:text="@string/txttitleAdviser"
        android:textSize="28sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvSubTitleEducation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:width="345dp"
        android:text="@string/personalizedWelcomeAdviser"
        android:textSize="15sp"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvTitleEducation" />

    <EditText
        android:id="@+id/edEspecialidad"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/editborderblack"
        android:hint="@string/nameEspecialidad"
        android:padding="12dp"
        android:drawableEnd="@drawable/baseline_search_24"
        app:layout_constraintTop_toBottomOf="@id/tvSubTitleEducation"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/edAniosEx"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/editborderblack"
        android:hint="@string/ageExperience"
        android:padding="12dp"
        app:layout_constraintTop_toBottomOf="@id/edEspecialidad"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/edcodColegiatura"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/editborderblack"
        android:hint="@string/codeColegiatura"
        android:padding="12dp"
        app:layout_constraintTop_toBottomOf="@id/edAniosEx"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/edtipoEnsenianza"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/editborderblack"
        android:hint="@string/typeTeaching"
        android:padding="12dp"
        android:focusable="false"
        android:clickable="true"
        app:layout_constraintTop_toBottomOf="@id/edcodColegiatura"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/edDisponibilidad"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/editborderblack"
        android:hint="@string/disponibilidad"
        android:padding="12dp"
        app:layout_constraintTop_toBottomOf="@id/edtipoEnsenianza"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/ednameAsesoria"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:background="@drawable/editborderblack"
        android:hint="@string/typeAdviser"
        android:padding="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edDisponibilidad" />

    <EditText
        android:id="@+id/edTokens"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:background="@drawable/editborderblack"
        android:hint="@string/TokensForPay"
        android:padding="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ednameAsesoria" />

    <EditText
        android:id="@+id/edDurationSesion"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:background="@drawable/editborderblack"
        android:hint="@string/HoursSesions"
        android:padding="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edTokens" />

    <Button
        android:id="@+id/btnContinueTokens"
        android:layout_width="265dp"
        android:layout_height="58dp"
        android:layout_marginTop="32dp"
        android:backgroundTint="@color/secondary"
        android:text="@string/btnNext"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edDurationSesion" />

</androidx.constraintlayout.widget.ConstraintLayout>
