<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".RAse_EducationFragment">

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:width="345dp"
        android:layout_marginTop="32dp"
        android:text="@string/txttitleAdviser"
        android:textSize="28sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvSubTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:width="345dp"
        android:text="@string/personalizedWelcomeAdviser"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvTitle"
        android:layout_marginTop="10dp"/>

    <Button
        android:id="@+id/edEspecialidad"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:width="350dp"
        android:background="@drawable/editborderblack"
        android:text="@string/nameEspecialidad"
        android:textColor="@color/black"
        android:padding="12dp"
        app:layout_constraintTop_toBottomOf="@id/tvSubTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <Button
        android:id="@+id/edAniosEx"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:width="350dp"
        android:background="@drawable/editborderblack"
        android:text="@string/ageExperience"
        android:textColor="@color/black"        android:padding="12dp"
        app:layout_constraintTop_toBottomOf="@id/edEspecialidad"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <EditText
        android:id="@+id/edcodColegiatura"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:width="350dp"
        android:background="@drawable/editborderblack"
        android:hint="@string/codeColegiatura"
        android:padding="12dp"
        app:layout_constraintTop_toBottomOf="@id/edAniosEx"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <Button
        android:id="@+id/edtipoEnsenianza"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:width="300dp"
        android:background="@drawable/editborderblack"
        android:text="@string/typeTeaching"
        android:textColor="@color/black"
        android:padding="12dp"
        android:focusable="false"
        android:clickable="true"
        app:layout_constraintTop_toBottomOf="@id/edcodColegiatura"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <EditText
        android:id="@+id/edDisponibilidad"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:width="350dp"
        android:background="@drawable/editborderblack"
        android:hint="@string/disponibilidad"
        android:padding="12dp"
        app:layout_constraintTop_toBottomOf="@id/edtipoEnsenianza"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <EditText
        android:id="@+id/edCertifications"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:width="350dp"
        android:background="@drawable/editborderblack"
        android:hint="@string/Certifications"
        android:padding="12dp"
        android:drawableEnd="@drawable/baseline_unarchive_24"
        app:layout_constraintTop_toBottomOf="@id/edDisponibilidad"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/edTokens"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:width="350dp"
        android:background="@drawable/editborderblack"
        android:text="@string/TokensForSesion"
        android:textColor="@color/gray"
        android:textSize="17sp"
        android:padding="12dp"
        app:drawableEndCompat="@drawable/baseline_chevron_right_24"
        app:layout_constraintTop_toBottomOf="@id/edCertifications"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <Button
        android:id="@+id/btnContinue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:width="265dp"
        android:height="58dp"
        android:backgroundTint="@color/secondary"
        android:text="@string/btncreateAccount"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edTokens" />



</androidx.constraintlayout.widget.ConstraintLayout>